- added and updated documentation:
  - moved the chapter on programmatic use of the translator from the Quick Start Guide to the Programmers's Guide
  - added a chapter on method resolution to the Programmer's Guide
  - added a chapter on the NetRexx Workspace (nrws) to the Quick Start Guide
  - updated and expanded the Pipelines Quick Start Guide (renamed)

NetRexx 3.07 [Oct 1st, 2018]

- Rexx() constructor no more package private (for use in other languages)
- Additions to RexxIO runtime class for more flexibility in say
  - setOutputStream
  - pushOutputStream
  - popOutputStream
- one-liner File read I/O in RexxIO().File.forEeachline()
- Sqlselect stage changes for Pipelines
- soundex() method on Rexx string
- documentation corrections by Gustavo Mindreau
- fix for class file image corruption problem with ecj compiles

NetRexx 3.06 [December 10th, 2017]

- Method level annotations will pass through to Java source.

NetRexx 3.05 [April 27th, 2017]

- First release after Kermit Kiser's passing. He will be remembered fondly for all his work.
- NetRexx has moved to Git on SourceForge for version management
- A new level of the Eclipse Java Compiler in NetRexxF.jar
- A build error on IBM's J9 JVM's was fixed
- The org.netrexx.address package was added as a foundation for OS shell interaction
- New documentary comments in nrc.bat and NetRexxC.bat for windows (Kermit Kiser)
- Java2Nrx and sysutils tools moved from contrib repository to tools (Marc Remes)
- All examples are now versioned under the master branch
- A fix for the RexxComparator class
- Various fixes and additions to documents.

NetRexx 3.04 [June 1st, 2015]

- a jsr 199 compliant way of calling the java compiler
    - Java source is saved on disk by the 3.04 translator if options -keep or -keepasjava are specified just as in release 3.03 of NetRexx. However NetRexx 3.04 does not write java to disk otherwise since it is no longer required in order to produce class files.