@@ -13,10 +13,11 @@
 \BOOKMARK [1][-]{section.6.1}{Installation\040and\040verification}{chapter.6}% 13
 \BOOKMARK [0][-]{chapter.7}{Differences\040with\040respect\040to\040the\040CMS\040Pipelines\040version}{}% 14
 \BOOKMARK [0][-]{chapter.8}{Developing\040stages\040in\040NetRexx}{}% 15
-\BOOKMARK [0][-]{chapter.9}{Deadlocks}{}% 16
-\BOOKMARK [0][-]{chapter.10}{The\040Pipes\040Compiler}{}% 17
-\BOOKMARK [0][-]{chapter.11}{Built-in\040Stages}{}% 18
-\BOOKMARK [0][-]{chapter.12}{Appendix\040A}{}% 19
-\BOOKMARK [0][-]{chapter.12}{List\040of\040Figures}{}% 20
-\BOOKMARK [0][-]{chapter*.6}{List\040of\040Tables}{}% 21
-\BOOKMARK [0][-]{chapter*.8}{Index}{}% 22
+\BOOKMARK [1][-]{section.8.1}{How\040to\040use\040a\040pipe\040in\040a\040NetRexx\040program}{chapter.8}% 16
+\BOOKMARK [0][-]{chapter.9}{Deadlocks}{}% 17
+\BOOKMARK [0][-]{chapter.10}{The\040Pipes\040Compiler}{}% 18
+\BOOKMARK [0][-]{chapter.11}{Built-in\040Stages}{}% 19
+\BOOKMARK [0][-]{chapter.12}{Appendix\040A}{}% 20
+\BOOKMARK [0][-]{chapter.12}{List\040of\040Figures}{}% 21
+\BOOKMARK [0][-]{chapter*.9}{List\040of\040Tables}{}% 22
+\BOOKMARK [0][-]{chapter*.11}{Index}{}% 23
