@@ -33,6 +33,7 @@ NetRexx 3.08 GA [August 23th, 2019]
   - added a chapter on method resolution to the Programmer's Guide
   - added a chapter on the NetRexx Workspace (nrws) to the Quick Start Guide
   - updated and expanded the Pipelines Quick Start Guide (renamed)
+  - Docker image added to standard distribution
 
 NetRexx 3.07 [Oct 1st, 2018]
 
